[project]
name = "agora"
version = "0.0.1"
description = "SDK for Agora"
requires-python = ">= 3.9"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://stagiralabs.com/"
Repository = "https://github.com/stagiralabs/agora"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]
