[project]
name = "agora-sdk"
version = "1.0.0-alpha.1"
description = "Python SDK for Agora"
license = { file = "LICENSE" }
requires-python = ">= 3.9"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "mypy>=1.11.0",
    "types-requests>=2.31.0.20240311",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://stagiralabs.com/"
Repository = "https://github.com/stagiralabs/agora"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.9"
pretty = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = [
    "^tests/",
]
